gcc/testsuite/gm2/iso/fail/badarray3.mod
MODULE badarray3 ;

VAR
   x: ARRAY [1..5] OF INTEGER ;
BEGIN
   x[1] := 'c';
END badarray3.
